# rust-web

./: Cargo.toml  LICENSE
config/: base.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/dao/: mod.rs  user.rs
src/middleware/: auth.rs  circuit_breaker.rs  mod.rs  rate_limite.rs
src/model/: mod.rs  response.rs
src/routes/: auth.rs  mod.rs  user.rs
src/utils/: jwt.rs  mod.rs
