[package]
name = "rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
config = { version = "0.15.11", features = ["toml"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] } 
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower = { version = "0.5.2", features = ["limit", "timeout"] }
